<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="label_dado_cliente">Dados do Cliente</string>
    <string name="label_escolha">Escolha a(s) pizza(s)</string>
    <string name="hint_nome_cliente">Nome do Cliente</string>
    <string name="label_atum">Atum</string>
    <string name="label_bacon">Bacon</string>
    <string name="label_calabresa">Calabresa</string>
    <string name="label_mussarela">Mussarela</string>
    <string name="label_tamanho">Tamanho da Pizza</string>
    <string name="label_pequena">Pequena</string>
    <string name="label_media">Média</string>
    <string name="label_grande">Grande</string>
    <string name="label_pagamento">Forma de Pagamento</string>

    <string name="credito">Cartão de Crédito</string>
    <string name="debito">Cartão de Débito</string>
    <string name="vr">Vale Refeição</string>
    <string name="fiado">Fiado</string>
    <string name="cupom">Cupom</string>
    <string name="label_calcular">Calcular</string>
    <string name="label_telefone">Número do Telefone</string>
    <string name="label_fazer_pedido">Fazer Pedido</string>

    <string name="saudacao">Olá %1$s, Vamos ligar para o número %2$s!</string>
</resources>
