<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/container_vertical"
    tools:context=".ui.main.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/container_vertical"
        tools:context=".ui.main.MainActivity">

        <!-- Unidades de Medida -->
        <!-- dp -> Para todas as views (largura e altura) -->
        <!-- sp -> Tamanho do texto -->

        <TextView
            style="@style/label_titulo"
            android:text="@string/label_dado_cliente" />

        <TextView
            android:id="@+id/tvNome"
            style="@style/field"
            android:layout_height="match_parent"
            android:hint="@string/hint_nome_cliente" />

        <TextView
            style="@style/label_titulo"
            android:text="@string/label_escolha" />

        <LinearLayout style="@style/container_horizontal">

            <CheckBox
                android:id="@+id/cbAtum"
                style="@style/checkbox_pizza"
                android:text="@string/label_atum" />

            <CheckBox
                android:id="@+id/cbBacon"
                style="@style/checkbox_pizza"
                android:text="@string/label_bacon" />
        </LinearLayout>

        <LinearLayout style="@style/container_horizontal">

            <CheckBox
                android:id="@+id/cbCalabresa"
                style="@style/checkbox_pizza"
                android:text="@string/label_calabresa" />

            <CheckBox
                android:id="@+id/cbMussarela"
                style="@style/checkbox_pizza"
                android:text="@string/label_mussarela" />
        </LinearLayout>

        <TextView
            style="@style/label_titulo"
            android:text="@string/label_tamanho" />

        <RadioGroup style="@style/radiogroup">

            <RadioButton
                style="@style/radioitem"
                android:text="@string/label_pequena" />

            <RadioButton
                style="@style/radioitem"
                android:text="@string/label_media" />

            <RadioButton
                style="@style/radioitem"
                android:text="@string/label_grande" />
        </RadioGroup>

        <TextView
            style="@style/label_titulo"
            android:text="@string/label_pagamento" />

        <Spinner
            style="@style/spinner"
            android:entries="@array/formas_pagamento"></Spinner>

        <Button
            android:id="@+id/btCalcular"
            style="@style/button_personalizado"
            android:text="@string/label_calcular" />

    </LinearLayout>

</ScrollView>