<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="#FFF">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="158dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza" />

    <EditText
        android:id="@+id/inputNome"
        android:layout_width="359dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_nome_cliente"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/inputTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/label_telefone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/inputNome"
        app:layout_constraintStart_toStartOf="@+id/inputNome"
        app:layout_constraintTop_toBottomOf="@+id/inputNome" />

    <Button
        android:id="@+id/btFazerPedido"
        style="@style/button_personalizado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_fazer_pedido"
        app:layout_constraintEnd_toEndOf="@+id/inputTelefone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputTelefone"
        app:layout_constraintTop_toBottomOf="@+id/inputTelefone" />

</android.support.constraint.ConstraintLayout>